--- a/website/aws.erb
+++ b/website/aws.erb
@@ -410,6 +410,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/r/cloud9_environment_ec2.html">aws_cloud9_environment_ec2</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/cloud9_environment_membership.html">aws_cloud9_environment_membership</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
