--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1624,6 +1624,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/r/gamelift_game_session_queue.html">aws_gamelift_game_session_queue</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/gamelift_script.html">aws_gamelift_script</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
