--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1305,6 +1305,9 @@
                             <a href="#">Resources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
+                                    <a href="/docs/providers/aws/r/efs_access_point.html">aws_efs_access_point</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/efs_file_system.html">aws_efs_file_system</a>
                                 </li>
                                 <li>
