--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2998,6 +2998,9 @@
                                     <a href="/docs/providers/aws/r/storagegateway_cached_iscsi_volume.html">aws_storagegateway_cached_iscsi_volume</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/storagegateway_stored_iscsi_volume.html">aws_storagegateway_stored_iscsi_volume</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/storagegateway_gateway.html">aws_storagegateway_gateway</a>
                                 </li>
                                 <li>
