--- a/website/aws.erb
+++ b/website/aws.erb
@@ -467,6 +467,9 @@
                                     <a href="/docs/providers/aws/r/cloudfront_distribution.html">aws_cloudfront_distribution</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/cloudfront_field_level_encryption_profile.html">aws_cloudfront_field_level_encryption_profile</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/cloudfront_origin_access_identity.html">aws_cloudfront_origin_access_identity</a>
                                 </li>
                                 <li>
