--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1114,6 +1114,9 @@
                                     <a href="/docs/providers/aws/r/ebs_volume.html">aws_ebs_volume</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/ec2_availability_zone_group.html">aws_ec2_availability_zone_group</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/ec2_capacity_reservation.html">aws_ec2_capacity_reservation</a>
                                 </li>
                                 <li>
