add docs and make catalog id optional

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1746,6 +1746,9 @@
                                     <a href="/docs/providers/aws/r/glue_trigger.html">aws_glue_trigger</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/glue_user_defined_function.html">aws_glue_user_defined_function</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/glue_workflow.html">aws_glue_workflow</a>
                                 </li>
                             </ul>
