--- a/website/aws.erb
+++ b/website/aws.erb
@@ -585,6 +585,9 @@
                                     <a href="/docs/providers/aws/r/codebuild_project.html">aws_codebuild_project</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/codebuild_report_group.html">aws_codebuild_report_group</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/codebuild_source_credential.html">aws_codebuild_source_credential</a>
                                 </li>
                                 <li>
