--- a/website/aws.erb
+++ b/website/aws.erb
@@ -826,6 +826,9 @@
                                     <a href="/docs/providers/aws/r/datasync_agent.html">aws_datasync_agent</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/datasync_location_fsx_windows.html">aws_datasync_location_fsx_window</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/datasync_location_efs.html">aws_datasync_location_efs</a>
                                 </li>
                                 <li>
