--- a/website/aws.erb
+++ b/website/aws.erb
@@ -461,6 +461,14 @@
                     <a href="#">CloudFront</a>
                     <ul class="nav">
                         <li>
+                            <a href="#">Data Sources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/d/cloudfront_distribution.html">aws_cloudfront_distribution</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
                             <a href="#">Resources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
